--- a/module-services/ui-demo/index.html
+++ b/module-services/ui-demo/index.html
@@ -10,7 +10,7 @@
     <header>
         <div class="header-container">
             <div class="logo">
-                <img src="logo.svg" alt="UI System Logo" height="40">
+                <img src="naswa_logo.jpg" alt="UI System Logo" height="40">
                 <h1>Unemployment Insurance System</h1>
             </div>
             <nav>
