--- a/module-services/claimant-services/client/index.html
+++ b/module-services/claimant-services/client/index.html
@@ -140,7 +140,7 @@
       <h2>Unemployment Insurance</h2>
       <nav>
         <a href="index.html" style="color: white; margin-right: 1rem;">Dashboard</a>
-        <a href="./claimant/new-claim.html" style="color: white;">File New Claim</a>
+        <a href="/claimant/new-claim.html" style="color: white;">File New Claim</a>
       </nav>
     </div>
   </header>
@@ -148,7 +148,7 @@
   <div class="container">
     <div class="dashboard-header">
       <h1>My Dashboard</h1>
-      <a href="./claimant/new-claim.html" class="btn">File New Claim</a>
+      <a href="/claimant/new-claim.html" class="btn">File New Claim</a>
     </div>
     
     <div class="card">
