--- a/module-services/ui-demo/index.html
+++ b/module-services/ui-demo/index.html
@@ -29,9 +29,9 @@
                 <h1>Modular Unemployment Insurance System</h1>
                 <p>A demonstration of cross-service communication with different protocols and technology stacks</p>
                 <div class="cta-buttons">
-                    <a href="/gateway-dashboard" class="button primary">API Gateway Dashboard</a>
-                    <a href="/claimant" class="button secondary">Claimant Portal</a>
-                    <a href="/processor" class="button secondary">Claims Processor</a>
+                    <a href="http://localhost:8080/camel/integration/api/v1/monitoring" class="button primary">API Gateway Dashboard</a>
+                    <a href="http://localhost:3001" class="button secondary">Claimant Portal</a>
+                    <a href="http://localhost:3002" class="button secondary">Claims Processor</a>
                 </div>
             </div>
         </section>
