--- a/module-services/claimant-services/public/index.html
+++ b/module-services/claimant-services/public/index.html
@@ -586,7 +586,7 @@
     <header>
         <div class="header-container">
             <div class="logo">
-                <img src="naswa_logo.png" alt="NASWA Logo" class="logo-icon">
+                <img src="/naswa_logo.png" alt="NASWA Logo" class="logo-icon">
                 <div>
                     <h1>NASWA Claimant Services</h1>
                     <p>Unemployment Insurance Claims Processing</p>
